# SentimentAnalysis

./: KNNClassifier.h  README.md
codigo/: CMakeLists.txt  Makefile
codigo/src/: KNNClassifier.h  PCA.h  SentimentPredictor.h  linalg.h  main.cpp  power_method_test.cpp
codigo/src_catedra/: reader.h  vector_builder.h
codigo/tests/: kNN_classifier.cpp  knn_classifier_test.cpp  test_pca.cpp
experimentacion/Notebooks/: Datasets.ipynb  Hyperparameter Tuning.ipynb  HyperparameterTuning-StopWords.ipynb  Metodo de Potencias.ipynb  train_test_sample.csv
experimentacion/Notebooks/.ipynb_checkpoints/: Datasets-checkpoint.ipynb  Hyperparameter Tuning-checkpoint.ipynb
experimentacion/Notebooks/Experimentos_4/: KNN_PCA_TrainTestSize.csv  KNN_TrainTestSize.csv
experimentacion/Notebooks/Experimentos_5/: KNN_PCA_TrainTestSize_and_K.csv  KNN_TrainTestSize_and_K.csv
experimentacion/executables/: power_method  tp2
